--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,66 +3,95 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".MainActivity">
 
-    <Button
-        android:id="@+id/gooButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="グー"
-        app:layout_constraintBaseline_toBaselineOf="@+id/chokiButton"
-        app:layout_constraintEnd_toStartOf="@+id/chokiButton"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent" />
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center_horizontal"
+        android:orientation="vertical"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="0dp">
 
-    <Button
-        android:id="@+id/chokiButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="91dp"
-        android:layout_marginBottom="91dp"
-        android:text="チョキ"
-        app:layout_constraintBottom_toBottomOf="@+id/player"
-        app:layout_constraintEnd_toStartOf="@+id/paaButton"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/gooButton"
-        app:layout_constraintTop_toTopOf="parent" />
+        <ImageView
+            android:id="@+id/player"
+            android:layout_width="300dp"
+            android:layout_height="250dp"
+            app:srcCompat="@drawable/choki" />
 
-    <Button
-        android:id="@+id/paaButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="パー"
-        app:layout_constraintBaseline_toBaselineOf="@+id/chokiButton"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/chokiButton" />
+        <ImageView
+            android:id="@+id/cpu"
+            android:layout_width="350dp"
+            android:layout_height="150dp"
+            app:srcCompat="@drawable/choki" />
 
-    <TextView
-        android:id="@+id/player"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="211dp"
-        android:text="player"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <TextView
+            android:id="@+id/result"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="勝敗"
+            android:textSize="40sp" />
 
-    <TextView
-        android:id="@+id/cpu"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="58dp"
-        android:text="cpu"
-        app:layout_constraintStart_toStartOf="@+id/player"
-        app:layout_constraintTop_toBottomOf="@+id/player" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/result"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="57dp"
-        android:text="勝敗"
-        app:layout_constraintStart_toStartOf="@+id/cpu"
-        app:layout_constraintTop_toBottomOf="@+id/cpu" />
+            <Button
+                android:id="@+id/gooButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="グー"
+                android:textColor="#FFFFFF"
+                app:rippleColor="#FFFFFF" />
+
+            <Button
+                android:id="@+id/paaButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="パー" />
+
+            <Button
+                android:id="@+id/chokiButton"
+                android:layout_width="wrap_content"
+                android:layout_height="48dp"
+                android:layout_weight="1"
+                android:text="チョキ" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/imageView3"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_weight="1"
+                app:srcCompat="@drawable/goo" />
+
+            <ImageView
+                android:id="@+id/imageView5"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_weight="1"
+                app:srcCompat="@drawable/paa" />
+
+            <ImageView
+                android:id="@+id/imageView4"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_weight="1"
+                app:srcCompat="@drawable/choki" />
+        </LinearLayout>
+
+    </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
